--- a/index.html
+++ b/index.html
@@ -83,26 +83,26 @@
 
   <script>
     const emails = [
-      { subject: "Request for Meeting – SSC CGL Aspirants Waiting Today", body: "Respected Sir,\n\nWe aspirants have come from different states and are currently outside your office requesting a meeting regarding CGL 2024 concerns." },
-      { subject: "Urgent: Meeting Requested by Present Aspirants", body: "Dear Sir,\n\nAspirants are waiting outside your office today, having traveled from various states. Kindly grant us time for a brief discussion." },
-      { subject: "Today’s Meeting Request – Aspirants Present Outside SSC", body: "Sir,\n\nWe humbly request a meeting. Aspirants are outside SSC right now, having come from far to raise our concerns directly." },
-      { subject: "Request to Consider Aspirants Present at SSC Today", body: "Respected Chairman Sir,\n\nPlease meet the aspirants who are presently at SSC HQ, seeking an audience regarding CGL-related concerns." },
-      { subject: "Kindly Grant Meeting to Aspirants Waiting Outside SSC", body: "Sir,\n\nWe respectfully seek your time today. Aspirants are at SSC HQ waiting to discuss critical CGL-related issues." },
-      { subject: "Meeting Appeal – Aspirants Waiting Today Outside SSC Office", body: "Dear Sir,\n\nAspirants from different regions are present today outside your office. We request you to kindly hear us in person." },
-      { subject: "Humble Request: Aspirants Present Today for Meeting", body: "Sir,\n\nWe are present outside SSC, having come from far with the hope of getting a chance to discuss our last attempt issue in CGL." },
-      { subject: "Aspirants Present Today – Request to Meet SSC Chairman", body: "Respected Sir,\n\nWe are at SSC HQ today and humbly request your kind attention for a meeting to raise some urgent concerns." },
-      { subject: "Sir, Kindly Meet Aspirants Waiting Today", body: "Dear Chairman Sir,\n\nWe are currently waiting outside SSC HQ. Please give us a few minutes of your valuable time." },
-      { subject: "Today’s Presence of Aspirants – Request for Meeting", body: "Sir,\n\nAspirants are physically present at SSC today. Kindly give us an opportunity to explain our situation face-to-face." },
-      { subject: "Aspirants from Various States Present Today – Meeting Request", body: "Dear Sir,\n\nWe are aspirants who have gathered today outside your office. Kindly consider granting a brief meeting." },
-      { subject: "CGL Aspirants Present Today at SSC – Request to be Heard", body: "Sir,\n\nWe are gathered at SSC office right now, respectfully requesting your time for a short meeting." },
-      { subject: "Important: Aspirants Waiting Outside SSC Today", body: "Respected Sir,\n\nWe humbly request your attention. Aspirants are outside SSC hoping for a chance to meet you." },
-      { subject: "Face-to-Face Meeting Request – Aspirants Present at SSC", body: "Sir,\n\nPlease give us an opportunity to express our concerns. We are waiting at SSC today." },
-      { subject: "Requesting Immediate Meeting – Aspirants Outside SSC Office", body: "Dear Sir,\n\nWe are waiting outside your office with great hope. Kindly meet us today." },
-      { subject: "Meeting Needed Today – Aspirants Outside SSC", body: "Sir,\n\nAspirants from across India are here outside SSC HQ. Please meet us to hear our concern." },
-      { subject: "CGL Aspirants Requesting to Meet You Today", body: "Respected Sir,\n\nWe are outside SSC, present physically, and hope to be heard today." },
-      { subject: "Kind Request for Brief Meeting – Aspirants Present at SSC", body: "Sir,\n\nYour kind attention is requested today. We are aspirants waiting respectfully at SSC." },
-      { subject: "Today’s Aspirants’ Visit – Request for Audience", body: "Sir,\n\nKindly meet us today. Aspirants are outside hoping for justice and your support." },
-      { subject: "Meeting Appeal from Present Aspirants – SSC HQ", body: "Respected Sir,\n\nAspirants are present today outside SSC. Please grant us a few minutes of your time." }
+      { subject: "Request for Urgent Meeting Regarding Age Reckoning in SSC CGL 2025 – Exam Starts 13 August", body: "We, the aggrieved last attempt candidates of SSC CGL 2025, humbly request you to kindly grant us an urgent meeting regarding the unresolved age reckoning issue.\n\nAs you are aware, the DoPT issued a letter on 1 July 2025 recommending that SSC consider revising the age reckoning date to 01.01.2025 for CGL 2025 and Phase 13. However, no action has been taken yet, and with Tier 1 scheduled from 13 August, our entire future hangs in the balance." },
+      { subject: "Humble Request for a Short Meeting – CGL 2025 Age Reckoning (01.01.2025) Relief", body: "This is a sincere appeal from last attempt SSC CGL aspirants who are severely impacted by the current age reckoning date of 01.08.2025 in CGL 2025.\n\nWe had earlier met you, and you had kindly assured us that SSC would act if DoPT sends a recommendation. DoPT fulfilled that on 1 July, yet the age reckoning remains unchanged. Now, with Tier 1 exam just days away, thousands of aspirants face disqualification." },
+      { subject: "URGENT: Meeting Request – CGL 2025 Age Reckoning Date (01.01.2025) for Last Attempt Candidates", body: "We respectfully seek an urgent meeting before the commencement of SSC CGL 2025 Tier 1 on 13 August. We are last attempt candidates, and despite DoPT’s letter to SSC dated 01.07.2025, the age reckoning date has not been revised to 01.01.2025." },
+      { subject: "Please Grant a Meeting – CGL 2025 Age Reckoning Date (01.01.2025) Not Yet Revised", body: "We are reaching out with folded hands to request an urgent meeting regarding the non-implementation of age reckoning as 01.01.2025 in SSC CGL 2025.\n\nDespite DoPT’s direction on 1 July 2025 and your previous assurance to us, SSC has not revised the reckoning date." },
+      { subject: "CGL 2025 Age Reckoning – Urgent Meeting Request Before Exam Begins", body: "This is a humble request for a short meeting from a group of last attempt SSC CGL aspirants, who are deeply impacted by the unaddressed age reckoning issue in CGL 2025.\n\nYou had earlier assured us that SSC would act on a DoPT recommendation. That letter was issued on 1 July 2025, yet no change has been made." },
+      { subject: "Request for Immediate Meeting Regarding Age Reckoning in SSC CGL 2025", body: "We are a group of last attempt SSC CGL aspirants requesting your kind intervention in the unresolved issue of age reckoning for CGL 2025.\n\nThe DoPT's letter dated 01.07.2025 clearly advised SSC to take appropriate action. However, with Tier 1 scheduled from 13 August, no response or relief has been given to the affected aspirants." },
+      { subject: "Urgent Meeting Request Before SSC CGL 2025 Exam – Age Reckoning Appeal", body: "We sincerely request a short meeting regarding the age reckoning issue for SSC CGL 2025. Despite the DoPT’s recommendation on 1 July 2025, no action has been taken." },
+      { subject: "Humble Meeting Request – CGL 2025 Age Reckoning (01.01.2025) Not Considered Yet", body: "We write on behalf of thousands of last attempt aspirants who are losing their chance in CGL 2025 due to non-implementation of 01.01.2025 as age reckoning.\n\nThough the DoPT directed SSC on 1 July, no action has been taken." },
+      { subject: "SOS Request for Meeting – Age Reckoning Date Relief for CGL 2025", body: "This is a final appeal for a meeting from last attempt SSC CGL candidates. The age reckoning issue remains unresolved even after the DoPT’s formal communication to SSC on 01.07.2025." },
+      { subject: "Kindly Allow Meeting – CGL 2025 Age Reckoning Remains Pending Despite DoPT Letter", body: "We are last attempt aspirants requesting a meeting regarding the pending revision of age reckoning date in SSC CGL 2025.\n\nYou had kindly assured action if DoPT sent instructions. That letter came on 1 July, yet no decision has followed." },
+      { subject: "Request to Meet Regarding Non-Implementation of Age Reckoning in CGL 2025", body: "With the Tier 1 exam beginning on 13 August, we request an urgent meeting to discuss the unresolved age reckoning issue. The matter was officially forwarded by DoPT, yet no response has followed." },
+      { subject: "CGL 2025 – Age Reckoning Date Unresolved, Kindly Allow Meeting", body: "We are writing to request a meeting with you regarding the age reckoning date for SSC CGL 2025, which still stands as 01.08.2025, contrary to the DoPT’s instruction dated 01.07.2025." },
+      { subject: "SSC CGL 2025 – Last Attempt Aspirants Request Immediate Meeting", body: "We humbly request your time for a brief meeting to present our grievance regarding the age reckoning date in CGL 2025, which remains unchanged despite DoPT support." },
+      { subject: "Request to Present Age Reckoning Representation Before SSC CGL 2025 Exam", body: "This is an appeal from a group of last attempt SSC CGL aspirants. The DoPT’s letter sent to SSC on 1 July remains unacted upon, and we are losing our final opportunity." },
+      { subject: "Meeting Appeal – Age Reckoning Date (01.01.2025) Still Not Considered", body: "We respectfully seek a short meeting to discuss why SSC has not implemented 01.01.2025 as the age reckoning date for CGL 2025 despite DoPT’s advice." },
+      { subject: "Urgent Request: Please Allow Meeting on Age Reckoning for CGL 2025", body: "The CGL 2025 exam is set to begin from 13 August, yet the issue of age reckoning remains unresolved. We are last attempt aspirants requesting a short meeting to present our grievance." },
+      { subject: "Final Request for Meeting – CGL 2025 Age Reckoning Not Addressed", body: "This is a humble plea from aspirants in their last permissible attempt. Kindly give us a chance to present our representation regarding the age reckoning date." },
+      { subject: "Age Reckoning Relief for CGL 2025 – Kindly Grant a Meeting", body: "We request your time for a very short meeting before Tier 1 of CGL 2025 begins. We want to raise the issue of non-implementation of 01.01.2025 age reckoning, despite DoPT’s direction." },
+      { subject: "Request to Present Last Attempt Candidates’ Appeal – CGL 2025", body: "We would be grateful if you could grant us a short meeting. The DoPT letter recommending 01.01.2025 as age reckoning has not been acted upon." },
+      { subject: "Kindly Meet Us Regarding Age Reckoning – CGL 2025 Begins 13 August", body: "We’re requesting an urgent meeting regarding the age reckoning issue in SSC CGL 2025. DoPT has already advised revision to 01.01.2025, but no step has been taken so far." }
     ];
 
     const container = document.getElementById('buttonsContainer');
@@ -114,11 +114,10 @@
       button.onclick = () => {
         const to = encodeURIComponent("chairman@ssc.nic.in;chairmanssc@gmail.com");
         const mailSubject = encodeURIComponent(email.subject);
-        const mailBody = encodeURIComponent(`${email.body}\n\nSincerely,\nConcerned SSC CGL 2024 Aspirant\nContact: +91-8219239139`);
+        const mailBody = encodeURIComponent(`${email.body}\n\nSincerely,\nAggrieved SSC CGL Aspirants\n+91 82192 39139\n+91 87007 25302`);
         window.location.href = `mailto:${to}?subject=${mailSubject}&body=${mailBody}`;
         button.classList.add('sent');
 
-        // Check if all buttons have been marked as sent
         const allSent = Array.from(document.querySelectorAll('button')).every(btn => btn.classList.contains('sent'));
         if (allSent) congrats.style.display = 'block';
       };
