--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ Please allow a short meeting before Tier 1 begins. We are last attempt aspirants
       const to = "chairman@ssc.nic.in,chairmanssc@gmail.com"; // No encodeURIComponent here!
       const mailSubject = encodeURIComponent(email.subject);
       const mailBody = encodeURIComponent(
-        email.body + "\n\nSincerely,\nConcerned SSC CGL 2024 Aspirant\nContact: +91-8219239139"
+        email.body + "\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8700725302, 8219239139"
       );
       window.location.href = `mailto:${to}?subject=${mailSubject}&body=${mailBody}`;
       button.classList.add('sent');
