--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Please allow a short meeting before Tier 1 begins. We are last attempt aspirants
     const button = document.createElement('button');
     button.textContent = `📩 Email ${i + 1}`;
     button.onclick = () => {
-      const mailto = = 'chairman@ssc.nic.in,chairmanssc@gmail.com'; // No encodeURIComponent here!
+      const to = = 'chairman@ssc.nic.in,chairmanssc@gmail.com'; // No encodeURIComponent here!
       const mailSubject = encodeURIComponent(email.subject);
       const mailBody = encodeURIComponent(
         email.body + "\n\nSincerely,\nConcerned SSC CGL 2024 Aspirants\nContact: 8700725302, 8219239139"
