--- a/index.html
+++ b/index.html
@@ -68,142 +68,102 @@ const emails = [
   {
     subject: "Request for Urgent Meeting – CGL 2025 Age Reckoning Date",
     body: `Respected Sir,
-DoPT advised SSC to set the CGL 2025 age reckoning date as 01.01.2025, but it remains 01.08.2025. Last attempt candidates like us are losing out as Tier 1 nears. Please allow a short urgent meeting for our appeal before the exam.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+DoPT advised SSC to set the CGL 2025 age reckoning date as 01.01.2025, but it remains 01.08.2025. Last attempt candidates like us are losing out as Tier 1 nears. Please allow a short urgent meeting for our appeal before the exam.`
   },
   {
     subject: "Humble Appeal for CGL 2025 Age Reckoning Meeting",
     body: `Dear Sir,
-Despite DoPT's clear recommendation for 01.01.2025, CGL 2025 still uses 01.08.2025 as age cutoff. This is excluding thousands of last attempt aspirants. We humbly request an immediate meeting before Tier 1 starts.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Despite DoPT's clear recommendation for 01.01.2025, CGL 2025 still uses 01.08.2025 as age cutoff. This is excluding thousands of last attempt aspirants. We humbly request an immediate meeting before Tier 1 starts.`
   },
   {
     subject: "URGENT: Meeting on CGL 2025 Age Cut-Off",
     body: `Respected Chairman,
-DoPT recommended 1 Jan 2025 as age date, but SSC has kept 1 Aug 2025. Many last attempt candidates are being excluded unjustly. Kindly grant us a brief meeting before Tier 1 for our representation.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+DoPT recommended 1 Jan 2025 as age date, but SSC has kept 1 Aug 2025. Many last attempt candidates are being excluded unjustly. Kindly grant us a brief meeting before Tier 1 for our representation.`
   },
   {
     subject: "Please Allow Meeting – CGL 2025 Age Issue Not Fixed",
     body: `Respected Sir,
-SSC has not acted on DoPT’s advice to set 01.01.2025 as the age reckoning date for CGL 2025, and last attempt candidates are suffering. We urgently request a short in-person meeting before Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+SSC has not acted on DoPT’s advice to set 01.01.2025 as the age reckoning date for CGL 2025, and last attempt candidates are suffering. We urgently request a short in-person meeting before Tier 1.`
   },
   {
     subject: "CGL 2025 – Urgent Meeting Request on Age Reckoning",
     body: `Dear Sir,
-The CGL 2025 age cutoff remains 01.08.2025 instead of the recommended 01.01.2025. Last attempt aspirants are being unfairly denied their chance. Please permit a brief meeting before the exam.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+The CGL 2025 age cutoff remains 01.08.2025 instead of the recommended 01.01.2025. Last attempt aspirants are being unfairly denied their chance. Please permit a brief meeting before the exam.`
   },
   {
     subject: "Immediate Meeting Needed: CGL 2025 Age Cutoff",
     body: `Respected Sir,
-DoPT’s letter supported 01.01.2025 as age date. SSC has not revised the cutoff, and Tier 1 is days away. Please grant us a short urgent meeting to present the case.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+DoPT’s letter supported 01.01.2025 as age date. SSC has not revised the cutoff, and Tier 1 is days away. Please grant us a short urgent meeting to present the case.`
   },
   {
     subject: "Urgent CGL 2025 Meeting – Age Reckoning Unresolved",
     body: `Dear Chairman,
-Though DoPT recommended 01.01.2025 for CGL 2025, the cutoff remains 01.08.2025, costing last attempt candidates their chances. We request a short meeting ahead of Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Though DoPT recommended 01.01.2025 for CGL 2025, the cutoff remains 01.08.2025, costing last attempt candidates their chances. We request a short meeting ahead of Tier 1.`
   },
   {
     subject: "Humble Request: CGL 2025 Age Cut-off Meeting",
     body: `Respected Sir,
-CGL 2025's unchanged age cutoff of 01.08.2025 is unfair after DoPT's 01.01.2025 advice. Please let us present our concern personally in a brief meeting before Tier 1 begins.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+CGL 2025's unchanged age cutoff of 01.08.2025 is unfair after DoPT's 01.01.2025 advice. Please let us present our concern personally in a brief meeting before Tier 1 begins.`
   },
   {
     subject: "SOS Meeting: CGL 2025 Age Date Still Unresolved",
     body: `Dear Sir,
-Despite DoPT’s support for 1 Jan, CGL 2025's age reckoning remains 1 Aug. Last attempt candidates stand disqualified. We seek a short urgent meeting before Tier 1 to appeal.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Despite DoPT’s support for 1 Jan, CGL 2025's age reckoning remains 1 Aug. Last attempt candidates stand disqualified. We seek a short urgent meeting before Tier 1 to appeal.`
   },
   {
     subject: "Kindly Grant Meeting – CGL 2025 Age Reckoning",
     body: `Respected Sir,
-The age cutoff (01.08.2025) is yet to be updated to the DoPT-backed date of 01.01.2025 for CGL 2025. Last attempt candidates need your kind intervention through a meeting.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+The age cutoff (01.08.2025) is yet to be updated to the DoPT-backed date of 01.01.2025 for CGL 2025. Last attempt candidates need your kind intervention through a meeting.`
   },
   {
     subject: "SSC CGL 2025 – Request for Age Date Meeting",
     body: `Dear Chairman,
-DoPT directed 01.01.2025 for age reckoning but SSC has not changed from 01.08.2025. Please allow a brief meeting for affected last attempt aspirants before Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+DoPT directed 01.01.2025 for age reckoning but SSC has not changed from 01.08.2025. Please allow a brief meeting for affected last attempt aspirants before Tier 1.`
   },
   {
     subject: "Need for Meeting: Unchanged CGL 2025 Age Reckoning",
     body: `Sir,
-CGL 2025 retains 01.08.2025 for age reckoning, despite DoPT’s 01.01.2025 advice. Last attempt aspirants lose their rightful chance. Please grant us a short meeting before Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+CGL 2025 retains 01.08.2025 for age reckoning, despite DoPT’s 01.01.2025 advice. Last attempt aspirants lose their rightful chance. Please grant us a short meeting before Tier 1.`
   },
   {
     subject: "SSC CGL 2025 – Final Attempt Aspirants’ Meeting Appeal",
     body: `Respected Sir,
-CGL 2025 age cutoff stands uncorrected at 1 Aug. Despite DoPT recommending 1 Jan, many are losing their last opportunity. Kindly permit a meeting before the exam.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+CGL 2025 age cutoff stands uncorrected at 1 Aug. Despite DoPT recommending 1 Jan, many are losing their last opportunity. Kindly permit a meeting before the exam.`
   },
   {
     subject: "Age Reckoning for CGL 2025 Unresolved – Need Meeting",
     body: `Dear Sir,
-Last attempt aspirants remain excluded as SSC hasn’t implemented DoPT’s 01.01.2025 advice for age reckoning. Please approve a short meeting before Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Last attempt aspirants remain excluded as SSC hasn’t implemented DoPT’s 01.01.2025 advice for age reckoning. Please approve a short meeting before Tier 1.`
   },
   {
     subject: "Meeting Appeal – CGL 2025 Age Date Still 1 Aug",
     body: `Sir,
-Despite DoPT’s letter, SSC continues with 01.08.2025 age cutoff. Many last attempt candidates are unfairly blocked. Please let us present this concern before Tier 1.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Despite DoPT’s letter, SSC continues with 01.08.2025 age cutoff. Many last attempt candidates are unfairly blocked. Please let us present this concern before Tier 1.`
   },
   {
     subject: "Urgent Meeting Request – CGL 2025 Age Issue",
     body: `Respected Sir,
-Unchanged age reckoning date for CGL 2025 (01.08.2025 vs DoPT’s 01.01.2025) is excluding last attempt candidates. Kindly meet us for urgent representation.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+Unchanged age reckoning date for CGL 2025 (01.08.2025 vs DoPT’s 01.01.2025) is excluding last attempt candidates. Kindly meet us for urgent representation.`
   },
   {
     subject: "Final Request – CGL 2025 Age Reckoning Update",
     body: `Dear Chairman,
-We respectfully request a short meeting before Tier 1 as the age cutoff remains 1 Aug 2025, despite DoPT’s support for 1 Jan. Our last chance is slipping.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+We respectfully request a short meeting before Tier 1 as the age cutoff remains 1 Aug 2025, despite DoPT’s support for 1 Jan. Our last chance is slipping.`
   },
   {
     subject: "CGL 2025 – Need Meeting on DoPT Age Advice",
     body: `Sir,
-DoPT’s advice on 01.01.2025 age reckoning is unheeded in CGL 2025’s notification. Many candidates lose their last attempt. Please grant a brief meeting soon.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+DoPT’s advice on 01.01.2025 age reckoning is unheeded in CGL 2025’s notification. Many candidates lose their last attempt. Please grant a brief meeting soon.`
   },
   {
     subject: "Request for Appeal Meeting – CGL 2025 Last Attempt",
     body: `Respected Sir,
-CGL 2025's age cutoff remains 1 Aug, not DoPT’s suggested 1 Jan. We seek a short meeting before Tier 1 to present our concern and documents.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+CGL 2025's age cutoff remains 1 Aug, not DoPT’s suggested 1 Jan. We seek a short meeting before Tier 1 to present our concern and documents.`
   },
   {
     subject: "Meeting Request – CGL 2025 Age Cutoff Excluding Candidates",
     body: `Dear Sir,
-With Tier 1 near, unchanged age cutoff of 01.08.2025 is excluding last attempt aspirants, against DoPT’s recommendation for 01.01.2025. Please allow an urgent short meeting.
-Aggrieved SSC CGL Aspirants
-82192 39139 / 87007 25302`
+With Tier 1 near, unchanged age cutoff of 01.08.2025 is excluding last attempt aspirants, against DoPT’s recommendation for 01.01.2025. Please allow an urgent short meeting.`
   }
 ];
 
